# LangGraph_PJT

./: .env.example  .gitignore  README.md  list_models.py  pyproject.toml
01_quickstart_calculator/: main.py
03_persistence/: README.md  main.py
04_human_in_the_loop/: README.md  main.py
05_hierarchical_subgraphs/: README.md  main.py
06_agentic_rag/: main.py
_learning_materials/: LEARNING_GUIDE.md  ai_engineering_toolkit.md
_learning_materials/langgraph_web_ui/: run_tests.sh
docs/: 2025_12_18-TEST_GUIDE.md  2025_12_18-test_sequence_design.md  2025_12_19-deep_research_architecture_comparison.md  2025_12_19-langgraph_multiagent_troubleshooting.md  2025_12_19-open_deep_research_comparison.md  2025_12_20-phase0_baseline_report.md  2025_12_20-phase2_thinktool_report.md  2025_12_20-phase3_clarify_report.md  2025_12_20-phase5_selfcritique_report.md  2025_12_21-deep_research_roadmap_v2.md  2025_12_21-phase10_parallel_report.md  2025_12_21-phase7_parallel_report.md  2025_12_21-phase9_supervisor_report.md  TEMPLATE_deep_research_agent_description.md
langgraph_server/: .env.example  pyproject.toml  run_benchmark.py  setup.sh
langgraph_server/benchmark_results/: final_save_test_20251221_164037.json  final_test_20251221_164203.json  full_test_20251221_163932.json  install_test_20251221_181103.json  phase_0_20251220_002536.json  phase_0_20251220_005203.json  phase_10_detailed_logging_20251221_133409.json  phase_10_full_logs_20251221_135017.json  phase_10_improved_logging_20251221_132255.json  phase_10_ordered_logs_20251221_134200.json  phase_10_parallel_20251221_131214.json  phase_10_verbose_5_urls_20251221_135856.json  phase_11_all_mcp_tools_20251221_163158.json  phase_11_mcp_active_20251221_161551.json  phase_11_mcp_off_20251221_160520.json  phase_1_20251220_011103.json  phase_2_20251220_020133.json  phase_2_20251220_021217.json  phase_3_20251220_223228.json  phase_4_20251220_231829.json  phase_6_decimal_carc_20251221_002542.json  phase_6_strict_carc_20251221_002155.json  phase_7_20251221_003104.json  phase_7_final_20251221_004932.json  phase_7_ua_fix_20251221_010631.json  phase_8_subgraph_20251221_014312.json
langgraph_server/src/agent/: mcp_client.py  mcp_server.py  metrics.py  nodes.py
langgraph_web_ui/: README.md  design_plan.md
langgraph_web_ui/client/: index.html  package-lock.json  package.json  vitest.config.ts
langgraph_web_ui/docs/: 2025_12_18-gemini_clone_design_spec.md  2025_12_18-sidebar_session_design_spec.md  2025_12_20-deep_research_roadmap.md  (+10 more)
lats/: main.py
multi_agent_network/: main.py
multi_agent_supervisor/: README.md  main.py  requirements.txt
plan_and_execute/: README.md  main.py
reflection/: main.py
scripts/: activate_env.sh
single_agent_basic/: README.md  main.py
(+87 files in other folders)
